Had to route images properly

--- a/css/museumCss/museumCSS.css
+++ b/css/museumCss/museumCSS.css
@@ -60,6 +60,11 @@ nav {
     nav a:visited {
       color: #DE2E48; }
 
+input[type="text"] {
+  color: #ccc;
+  font-size: 14px;
+  font-style: italic; }
+
 .topForm {
   border-radius: 5px;
   float: right;
