--- a/css/museumCss/museumCSS.scss
+++ b/css/museumCss/museumCSS.scss
@@ -88,6 +88,13 @@ nav {
 
 }
 
+input[type="text"] {
+    color: #ccc;
+    font-size: 14px;
+    font-style: italic;
+
+}
+
 .topForm {
   border-radius: 5px;
   float: right;
