--- a/css/portfolioCss/portfolio_main.css
+++ b/css/portfolioCss/portfolio_main.css
@@ -72,14 +72,18 @@ embed {
  
 footer {
 	color: white;
-	clear: both; /* margin-bottom: -1000px; */
-	}
+	position: relative;
+	top: 17rem;
+}
  
- .footer-icons {
+.footer-content {
+
+}
+
+.footer-icons {
  	height: 50px; 
  	width: 50px;
  	padding: 20px;
- 	margin-top: -35px;
  }
 
  .footer-icons:hover {
@@ -94,16 +98,14 @@ form { color: white;
  
  
 h1 {
-    color: black;
+	color: black;
     font-family: 'Italianno', cursive;
     font-size: 100px;
-    margin-left: auto;
-    margin-top: auto;
     opacity: 1.0;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
 }
- 
-	/* h1::first-letter { font-size: 100px;} */
- 
  
 h4 {
 	font-size: 30px;
@@ -148,9 +150,13 @@ label.form-label {
  
  
 .main {
-	    z-index: 1;
-    	margin: 10em auto auto 35em;
-    }
+    margin: auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(50%);
+    width: 50%;
+    z-index: 1;
+  }
  
  
 nav {
@@ -174,20 +180,17 @@ nav {
  
  
 p {
-	color: white;
-	font-family: 'Raleway', Helvetica, Arial, sans-serif;
-	font-size: 175px;
-	margin-left: -35px;
-	margin-top: -100px;
-	opacity: 1.0;
-	padding-top: 20px;
-	text-shadow: 45px 0px 45px #000000; }
-	/* Look into text-shadow some more: change the 100px 100px; */
- 
-/* p::first-letter {
-	display: inline;
-	font-size: 175px; 
-} */
+    color: white;
+    font-family: 'Raleway', Helvetica, Arial, sans-serif;
+    font-size: 175px;
+    opacity: 1.0;
+    text-shadow: 45px 0px 45px #000000;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    position: relative;
+    bottom: 5rem;
+}
 
 @media only screen and (max-width: 667px) {
 	body {
