--- a/css/portfolioCss/portfolio_main.css
+++ b/css/portfolioCss/portfolio_main.css
@@ -178,6 +178,14 @@ nav {
     padding: 20;
     word-spacing: 30px;
     }
+
+ a {
+ 	text-decoration: none;
+ }
+
+ a:visited {
+ 	text-decoration: none;
+ }
  
  
 p {
