changed anchor tag colors

--- a/css/portfolioCss/portfolio_main.css
+++ b/css/portfolioCss/portfolio_main.css
@@ -180,10 +180,12 @@ nav {
     }
 
  a {
+    color: white;
  	text-decoration: none;
  }
 
  a:visited {
+    color: inherit;
  	text-decoration: none;
  }
  
