--- a/css/portfolioCss/portfolio_main.css
+++ b/css/portfolioCss/portfolio_main.css
@@ -175,12 +175,12 @@ nav {
     margin-right: -35px;;
     margin-top: -35;
     opacity: .5;
-    padding: 20;
-    word-spacing: 30px;
-    }
+    padding: 20px;
+}
 
  a {
     color: white;
+    padding: 1rem;
  	text-decoration: none;
  }
 
