--- a/css/portfolioCss/portfolio_main.css
+++ b/css/portfolioCss/portfolio_main.css
@@ -1,17 +1,14 @@
-
 /* Keep CSS Styles alphabetized. Good practice. --> http://www.styleneat.com/index.php */
+.header-icons:visited {
+  color: inherit; }
 
-.header-icons:visited { color: inherit; }
- 
 .header-icons:hover {
-		background-color: #000000 !important;
-		color:white !important; 
-		opacity: 0.2;
-		padding: 20px;
-		text-decoration: none;
-	}
- 
- 
+  background-color: #000000 !important;
+  color: white !important;
+  opacity: 0.2;
+  padding: 20px;
+  text-decoration: none; }
+
 /* img {
     border-radius: 50%;
     margin-left: 50em;
@@ -22,31 +19,30 @@
     width: 600px;
     z-index: 0;
 } */
+article {
+  font-family: Helvetica, Arial, sans-serif; }
 
-article { font-family: Helvetica, Arial, sans-serif; }
- 
 body {
-	background: url("http://static.tumblr.com/1a5cc1d0e1c7f0dced04ddeb56df0be3/wbu4sfk/1Uwof0biz/tumblr_static_3dokueqingaowkk0s0o40kok4.jpg") no-repeat center fixed;
-	background-attachment: scroll;
-	opacity: 0.75;
-	max-width: 2000px;
-	max-height: auto;
-	display: inline;
-	position: relative; }
- 
+  background: url("http://static.tumblr.com/1a5cc1d0e1c7f0dced04ddeb56df0be3/wbu4sfk/1Uwof0biz/tumblr_static_3dokueqingaowkk0s0o40kok4.jpg") no-repeat center fixed;
+  background-attachment: scroll;
+  opacity: 0.75;
+  max-width: 2000px;
+  max-height: auto;
+  display: inline;
+  position: relative; }
+
 .btn {
-    -webkit-border-radius: 10;
-    -moz-border-radius: 10;
-    border-radius: 10px;
-    font-family: Arial;
-    color: #ffffff;
-    font-size: 20px;
-    background: #3498db;
-    padding: 10px 10px 10px 10px;
-    text-decoration: none;
-    margin-top: 10px;
-    margin-bottom: -25px;
-}
+  -webkit-border-radius: 10;
+  -moz-border-radius: 10;
+  border-radius: 10px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  background: #3498db;
+  padding: 10px 10px 10px 10px;
+  text-decoration: none;
+  margin-top: 10px;
+  margin-bottom: -25px; }
 
 .btn:hover {
   background: #3cb0fd;
@@ -55,168 +51,138 @@ body {
   background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-}
- 
+  text-decoration: none; }
+
 .contact_form {
-	align-items: center;
-    font-family: 'Raleway', sans-serif;
-    margin-left: 39% !important;
-    margin-top: 10% !important;
-    z-index: 2; }
+  align-items: center;
+  font-family: 'Raleway', sans-serif;
+  margin-left: 39% !important;
+  margin-top: 10% !important;
+  z-index: 2; }
 
 embed {
-	margin-top: -35px;
-}
- 
- 
-footer {
-	color: white;
-	position: relative;
-	top: 17rem;
-}
- 
-.footer-content {
+  margin-top: -35px; }
 
-}
+footer {
+  color: white;
+  position: relative;
+  top: 17rem; }
 
 .footer-icons {
- 	height: 50px; 
- 	width: 50px;
- 	padding: 20px;
- }
+  height: 50px;
+  width: 50px;
+  padding: 20px; }
 
- .footer-icons:hover {
- 	background-color: white !important;
- 	cursor: pointer !important;
- 	border-radius: 50% !important;
- 	opacity: .75;
- }
- 
-form { 
-	color: white;
-}
- 
- 
+.footer-icons:hover {
+  background-color: white !important;
+  cursor: pointer !important;
+  border-radius: 50% !important;
+  opacity: .75; }
+
+form {
+  color: white; }
+
 h1 {
-	color: black;
-    font-family: 'Italianno', cursive;
-    font-size: 100px;
-    opacity: 1.0;
-    margin: 0 auto;
-    display: block;
-    text-align: center;
-}
- 
+  color: black;
+  font-family: 'Italianno', cursive;
+  font-size: 100px;
+  opacity: 1.0;
+  margin: 0 auto;
+  display: block;
+  text-align: center; }
+
 h4 {
-	font-size: 30px;
-	opacity: 1.0; }
- 
- 
+  font-size: 30px;
+  opacity: 1.0; }
+
 header {
-	margin: 20px; /*background-color: #b4c1c4;*/
-	padding: 20px; }
- 
- 
-header, footer { text-align: center; }
- 
- 
+  margin: 20px;
+  /*background-color: #b4c1c4;*/
+  padding: 20px; }
+
+header, footer {
+  text-align: center; }
+
 input[type="text"].form-input {
-	border-radius: 2px;
-	border: 5px solid white;
-	box-sizing: border-box;
-	color: #ccc;
-	display: block;
-	font-size: 14px;
-	font-style: italic;
-	outline: none;
-	padding: 5px 10px;
-	width: 300px; }
- 
-	input[type="text"].form-input:focus {
-		border-color: #f9d657;
-		color: #000; }
+  border-radius: 2px;
+  border: 5px solid white;
+  box-sizing: border-box;
+  color: #ccc;
+  display: block;
+  font-size: 14px;
+  font-style: italic;
+  outline: none;
+  padding: 5px 10px;
+  width: 300px; }
+
+input[type="text"].form-input:focus {
+  border-color: #f9d657;
+  color: #000; }
 
 .label-input-pair {
-	display: block;
-	margin: 30px 0; }
- 
- 
+  display: block;
+  margin: 30px 0; }
+
 label.form-label {
-	display: block;
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: 5px;
-	outline: none; }
- 
- 
+  display: block;
+  font-size: 14px;
+  font-weight: bold;
+  margin-bottom: 5px;
+  outline: none; }
+
 .main {
-    margin: auto;
-    position: relative;
-    top: 50%;
-    transform: translateY(50%);
-    width: 50%;
-    z-index: 1;
-  }
- 
- 
+  margin: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(50%);
+  width: 50%;
+  z-index: 1; }
+
 nav {
-	/* color: black;
-	font-family: 'Cinzel', serif;
-	font-size: 20px;
-	word-spacing: 30px; } */
+  /* color: black;
+  font-family: 'Cinzel', serif;
+  font-size: 20px;
+  word-spacing: 30px; } */
+  /* ALTERNATIVE NAV STYLE: -->  BANNER ACROSS THE TOP PAGE */
+  color: white;
+  background-color: black;
+  font-family: 'Cinzel', serif;
+  font-size: 20px;
+  margin-left: -35px;
+  margin-right: -35px;
+  margin-top: -35;
+  opacity: .5;
+  padding: 20px; }
 
-	/* ALTERNATIVE NAV STYLE: -->  BANNER ACROSS THE TOP PAGE */
-	color: white;
-    background-color: black;
-    font-family: 'Cinzel', serif;
-    font-size: 20px;
-    margin-left: -35px;
-    margin-right: -35px;;
-    margin-top: -35;
-    opacity: .5;
-    padding: 20px;
-}
+a {
+  color: white;
+  padding: 1rem;
+  text-decoration: none; }
 
- a {
-    color: white;
-    padding: 1rem;
- 	text-decoration: none;
- }
+a:visited {
+  color: inherit;
+  text-decoration: none; }
 
- a:visited {
-    color: inherit;
- 	text-decoration: none;
- }
- 
- 
 p {
-    color: white;
-    font-family: 'Raleway', Helvetica, Arial, sans-serif;
-    font-size: 175px;
-    opacity: 1.0;
-    text-shadow: 45px 0px 45px #000000;
-    margin: 0 auto;
-    display: block;
-    text-align: center;
-    position: relative;
-    bottom: 5rem;
-}
+  color: white;
+  font-family: 'Raleway', Helvetica, Arial, sans-serif;
+  font-size: 175px;
+  opacity: 1.0;
+  text-shadow: 45px 0px 45px #000000;
+  margin: 0 auto;
+  display: block;
+  text-align: center;
+  position: relative;
+  bottom: 5rem; }
 
 @media only screen and (max-width: 667px) {
-	h1 {
-		font-size: 65px;
-	}
+  h1 {
+    font-size: 65px; }
 
-	p {
-		font-size: 100px;
-		display: block;
-		position: relative;
-		bottom: 2rem;
-	}
-}
+  p {
+    font-size: 100px;
+    display: block;
+    position: relative;
+    bottom: 2rem; } }
 
-
-
-
- 
+/*# sourceMappingURL=portfolio_main.css.map */
