Rewriting in SASS

--- a/css/portfolioCss/portfolio_main.scss
+++ b/css/portfolioCss/portfolio_main.scss
@@ -1,16 +1,22 @@
 
 /* Keep CSS Styles alphabetized. Good practice. --> http://www.styleneat.com/index.php */
 
-.header-icons:visited { color: inherit; }
  
-.header-icons:hover {
+
+.header-icons {
+
+    &:visited {
+        color: inherit;
+    }
+
+    &:hover {
         background-color: #000000 !important;
         color:white !important; 
         opacity: 0.2;
         padding: 20px;
         text-decoration: none;
     }
- 
+}
  
 /* img {
     border-radius: 50%;
