--- a/css/portfolioCss/portfolio_main.css
+++ b/css/portfolioCss/portfolio_main.css
@@ -1,4 +1,10 @@
 /* Keep CSS Styles alphabetized. Good practice. --> http://www.styleneat.com/index.php */
+.project-div {
+  display: inline; }
+  .project-div .hidden-projects-div {
+    /*display: none;  Need to change this later so it's a drop-down */
+    display: inline; }
+
 .header-icons:visited {
   color: inherit; }
 .header-icons:hover {
