Added overlay to portfolio index.html

--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -71,9 +71,9 @@ article {
   font-family: Helvetica, Arial, sans-serif; }
 
 body {
-  background: url("http://static.tumblr.com/1a5cc1d0e1c7f0dced04ddeb56df0be3/wbu4sfk/1Uwof0biz/tumblr_static_3dokueqingaowkk0s0o40kok4.jpg") no-repeat center fixed;
+  background: url("../../imgs/portfolioImgs/blurred-background1.jpg") no-repeat center fixed;
   background-attachment: scroll;
-  opacity: 0.75;
+  opacity: 1.0;
   max-width: 2000px;
   max-height: auto;
   display: inline;
@@ -118,7 +118,7 @@ footer {
   height: 5rem; }
 
 form {
-  color: white; }
+  color: rgba(255, 255, 255, 0.85); }
 
 .name {
   float: left;
@@ -176,10 +176,10 @@ label.form-label {
     clear: both; }
 
 hr {
-  border: 1px solid white; }
+  border: 1px solid rgba(255, 255, 255, 0.25); }
 
 p {
-  color: white;
+  color: rgba(255, 255, 255, 0.5);
   font-family: 'Catamaran', Helvetica, Arial, sans-serif;
   position: relative;
   /* left: 4rem; */
@@ -215,7 +215,24 @@ a:visited {
   height: 40%;
   width: 25%;
   position: relative;
-  left: 15%; }
+  left: 15%;
+  opacity: 0.85; }
+
+.overlay {
+  background: rgba(0, 0, 0, 0.75);
+  height: 100%;
+  position: relative;
+  bottom: 2rem;
+  display: block;
+  opacity: 1;
+  transition: opacity 500ms ease; }
+  .overlay p {
+    font-size: 25px;
+    color: white;
+    padding: 2rem 0;
+    margin: 2rem 1rem; }
+  .overlay:hover {
+    opacity: 0; }
 
 .wrapper {
   position: relative;
