--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -50,8 +50,8 @@ article { font-family: Helvetica, Arial, sans-serif; }
  
 body {
     background: url("../../imgs/portfolioImgs/blurred-background1.jpg") no-repeat center fixed;
+    background-size: 100%;
     background-attachment: scroll;
-    opacity: 1.0;
     max-width: 2000px;
     max-height: auto;
     display: inline;
@@ -171,6 +171,7 @@ label.form-label {
 
   hr {
     border: 1px solid rgba(255, 255, 255, 0.25);
+    display: none;
   }
 
 p {
