Added iPhone5 media query

--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -298,5 +298,13 @@ a:visited {
 
   .nav-links {
     font-size: 15px; } }
+/* ----------- iPhone 5 ----------- */
+/* Portrait*/
+@media only screen and (max-width: 321px) {
+  .nav-links {
+    font-size: 10px; }
+
+  .name h1 {
+    font-size: 25px; } }
 
 /*# sourceMappingURL=style.css.map */
