It's the little things

--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -347,6 +347,10 @@ nav {
 /* ----------- iPhone 5 ----------- */
 /* Portrait*/
 @media only screen and (max-width: 321px) {
+    .nav {
+        width: 95%;
+    }
+
     .nav-links {
         font-size: 10px;
     }
