--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -301,6 +301,9 @@ a:visited {
 /* ----------- iPhone 5 ----------- */
 /* Portrait*/
 @media only screen and (max-width: 321px) {
+  .nav {
+    width: 95%; }
+
   .nav-links {
     font-size: 10px; }
 
