Adding media queries for height

--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -41,7 +41,7 @@ table {
   border-spacing: 0; }
 
 .nav-links {
-  font-family: 'Lato','Raleway', Helvetica, Arial, sans-serif;
+  font-family: 'Lato', 'Raleway', Helvetica, Arial, sans-serif;
   font-size: 20px;
   float: right; }
   .nav-links .nav-box {
@@ -54,19 +54,20 @@ table {
     .nav-links .nav-box:first-child {
       border-left: 1px solid white; }
     .nav-links .nav-box:hover {
-      color: black;
-      background: white; }
+      background: #fff; }
+      .nav-links .nav-box:hover .header-icons {
+        color: #000; }
 
-.header-icons {
-  /*    &:hover {
-          background-color: #000000;
-          color:white ; 
-          opacity: 0.2;
-          text-decoration: none;
-      }*/ }
-  .header-icons:visited {
-    color: inherit; }
+/*.header-icons {
 
+    &:visited {
+        color: inherit;
+    }
+
+    &:hover {     
+        color: #000; 
+    }
+}*/
 article {
   font-family: Helvetica, Arial, sans-serif; }
 
@@ -213,12 +214,24 @@ a:visited {
   text-decoration: none; }
 
 .projects {
-  height: 40%;
+  height: 50%;
   width: 25%;
   position: relative;
   left: 15%;
   opacity: 0.85; }
 
+/*For cicular display*/
+/* .projects {
+     border-radius: 50% 50%;
+     box-sizing: border-box;
+     height: 300px;
+     left: 15%;
+     opacity: 0.85;
+     overflow: hidden;
+     position: relative;
+     text-align: center;
+     width: 300px;
+}*/
 .overlay {
   background: rgba(0, 0, 0, 0.75);
   height: 100%;
@@ -226,7 +239,20 @@ a:visited {
   bottom: 2rem;
   display: block;
   opacity: 1;
-  transition: opacity 500ms ease; }
+  transition: opacity 500ms ease;
+  /*For circular display :
+  /*.overlay {
+       background: rgba(0, 0, 0, 0.75);
+       box-sizing: border-box;
+       display: block;
+       height: 100%;
+       left: 0;
+       opacity: 1;
+       padding: 7rem 1rem 0;
+       position: absolute;
+       top: 0;
+       transition: opacity 500ms ease;
+       width: 100%;*/ }
   .overlay p {
     font-size: 25px;
     color: white;
@@ -261,6 +287,15 @@ a:visited {
   float: left;
   width: 18%; }
 
+@media only screen and (max-height: 630px) {
+  .projects {
+    height: 65%; } }
+@media only screen and (max-height: 530px) {
+  .projects {
+    height: 75%; } }
+@media only screen and (max-height: 430px) {
+  .projects {
+    height: 100%; } }
 @media only screen and (min-width: 1051px) and (max-width: 1350px) {
   .projects {
     width: 34%;
@@ -300,7 +335,7 @@ a:visited {
     font-size: 15px; } }
 /* ----------- iPhone 5 ----------- */
 /* Portrait*/
-@media only screen and (max-width: 321px) {
+@media only screen and (max-width: 390px) {
   .nav {
     width: 95%; }
 
