Adding new portfolio folder

--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -101,6 +101,16 @@ footer {
     clear: both;
     /*background: $footer-color;*/
     height: 5rem;
+
+
+/*To anchor footer at the bottom
+    color: white;
+    position: fixed;
+    clear: both;
+    height: 5rem;
+    bottom: 0;
+    left: 35%;*/
+
 }
  
 .footer-content {
