--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -116,7 +116,14 @@ footer {
   position: relative;
   clear: both;
   /*background: $footer-color;*/
-  height: 5rem; }
+  height: 5rem;
+  /*To anchor footer at the bottom
+      color: white;
+      position: fixed;
+      clear: both;
+      height: 5rem;
+      bottom: 0;
+      left: 35%;*/ }
 
 form {
   color: rgba(255, 255, 255, 0.85); }
