--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -1,8 +1,3 @@
-/*!
- * Start Bootstrap - Grayscale v4.0.0-alpha (http://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
- */
 body {
   width: 100%;
   height: 100%;
@@ -196,7 +191,7 @@ a:hover, a:focus {
   background: url("../../imgs/portfolioImgs/tshirts.png") no-repeat center;
   background-size: cover; }
 
-.download-section {
+.resume-section {
   width: 100%;
   padding: 50px 0;
   color: white;
@@ -206,11 +201,6 @@ a:hover, a:focus {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover; }
-
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px; }
 
 @media (min-width: 767px) {
   .content-section {
@@ -286,5 +276,11 @@ img::-moz-selection {
 
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
+
+ /*!
+* Start Bootstrap - Grayscale v4.0.0-alpha (http://startbootstrap.com/template-overviews/grayscale)
+* Copyright 2013-2017 Start Bootstrap
+* Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
+*/
 
 /*# sourceMappingURL=style.css.map */
