--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -1,8 +1,4 @@
-/*!
- * Start Bootstrap - Grayscale v4.0.0-alpha (http://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
- */
+
 body {
   width: 100%;
   height: 100%;
@@ -193,7 +189,7 @@ a {
   background-size: cover;
 }
 
-.download-section {
+.resume-section {
   width: 100%;
   padding: 50px 0;
   color: white;
@@ -204,10 +200,6 @@ a {
   background-size: cover;
   -o-background-size: cover; }
 
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px; }
 
 @media (min-width: 767px) {
   .content-section {
@@ -285,3 +277,12 @@ img::-moz-selection {
 
 body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
+
+
+
+
+  /*!
+ * Start Bootstrap - Grayscale v4.0.0-alpha (http://startbootstrap.com/template-overviews/grayscale)
+ * Copyright 2013-2017 Start Bootstrap
+ * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
+ */
