--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -193,7 +193,7 @@ a {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../../imgs/portfolioImgs/downloads-bg.jpg) no-repeat center center scroll;
+  background: url("../../imgs/portfolioImgs/downloads-bg.jpg") no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
