--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -245,7 +245,7 @@ ul.banner-social-buttons {
     margin-top: 15px; } }
 @media (max-width: 767px) {
   ul.banner-social-buttons li {
-    display: block;
+    display: inline-block;
     margin-bottom: 20px;
     padding: 0; }
 
