--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -247,7 +247,7 @@ ul.banner-social-buttons {
       margin-top: 15px; } }
   @media (max-width: 767px) {
     ul.banner-social-buttons li {
-      display: block;
+      display: inline-block;
       margin-bottom: 20px;
       padding: 0; }
       ul.banner-social-buttons li:last-child {
