--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -103,7 +103,7 @@ a:hover, a:focus {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../../imgs/portfolioImgs/intro-bg.jpg) no-repeat bottom center scroll;
+  background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -132,7 +132,8 @@ a:hover, a:focus {
     border-top: 1px solid #fff; }
 
   .masthead .intro-body .intro-text {
-    font-size: 22px; } }
+    font-size: 22px;
+    color: #fff; } }
 .btn-circle {
   width: 50px;
   height: 50px;
@@ -201,6 +202,8 @@ a:hover, a:focus {
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover; }
+  .resume-section a {
+    font-size: 20px; }
 
 @media (min-width: 767px) {
   .content-section {
