--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -107,7 +107,9 @@ a {
     .masthead .intro-body .brand-heading {
       font-size: 40px; }
     .masthead .intro-body .intro-text {
-      font-size: 18px; }
+      font-size: 18px;
+      color: #000; 
+    }
   @media (min-width: 768px) {
     .masthead {
       height: 100%;
