--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -186,6 +186,9 @@ a:hover, a:focus {
   .overlay:hover .project-description {
     opacity: 1; }
 
+@media only screen and (max-width: 767px) {
+  .hide {
+    display: none; } }
 .wikipedia {
   background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
   background-size: cover;
@@ -224,9 +227,8 @@ a:hover, a:focus {
   .resume-section {
     padding: 100px 0; }
 
-  #map {
-    height: 350px;
-    margin-top: 250px; } }
+  .hide {
+    display: block; } }
 .btn {
   text-transform: uppercase;
   font-family: "Cabin", "Helvetica Neue", Helvetica, Arial, sans-serif;
