--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -179,7 +179,7 @@ a {
     .project-description {
       opacity: 0;
       transition: opacity 500ms ease;
-}
+    }
 
     &:hover {
 
@@ -191,6 +191,12 @@ a {
         opacity: 1;
       }
     }
+}
+
+@media only screen and (max-width: 767px) {
+  .hide {
+    display: none;
+  }
 }
 
 
@@ -242,10 +248,9 @@ a {
   .resume-section {
     padding: 100px 0; 
     }
-  #map {
-    height: 350px;
-    margin-top: 250px; 
-    } 
+  .hide {
+    display: block;
+    }
   }
 
 .btn {
