--- a/css/museumCss/museumCSS.css
+++ b/css/museumCss/museumCSS.css
@@ -60,6 +60,16 @@ nav {
     nav a:visited {
       color: #DE2E48; }
 
+.fa {
+  display: block !important;
+  width: 8%;
+  margin: 0 auto;
+  color: #DE2E48;
+  cursor: pointer; }
+
+@media only screen and (min-width: 767px) {
+  .fa {
+    display: none !important; } }
 input[type="text"] {
   color: #ccc;
   font-size: 14px;
