--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 35px;
+  margin: 35px 0 0;
   text-transform: uppercase;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
@@ -172,6 +172,8 @@ a:hover, a:focus {
   display: block;
   opacity: 1;
   transition: opacity 500ms ease; }
+  .overlay h3 {
+    margin-left: 15px; }
   .overlay p {
     font-size: 25px;
     color: white;
@@ -192,7 +194,7 @@ a:hover, a:focus {
 .wikipedia {
   background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
   background-size: cover;
-  margin-top: 40px; }
+  margin-top: 15px; }
 
 .museum {
   background: url("../../imgs/portfolioImgs/museum_image.png") no-repeat center;
