--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -17,7 +17,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 35px;
+  margin: 35px 0 0;
   text-transform: uppercase;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
@@ -167,6 +167,10 @@ a {
     opacity: 1;
     transition: opacity 500ms ease;
 
+    h3 {
+      margin-left: 15px;
+    }
+
     p {
       font-size: 25px;
       color: rgba(255, 255, 255, 1);
@@ -204,7 +208,7 @@ a {
 .wikipedia {
   background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
   background-size: cover;
-  margin-top: 40px;
+  margin-top: 15px;
 }
 
 .museum {
