--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -4,6 +4,9 @@ body {
   height: 100%;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
+  background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
+  background-attachment: fixed;
+  background-size: cover;
   background-color: black;
   position: relative; }
 
@@ -48,7 +51,8 @@ a {
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-family: "Cabin", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  background-color: black; }
+  background-color: rgba(0,0,0,0.5); 
+}
   #mainNav .navbar-toggler {
     color: white;
     font-size: 14px;
@@ -95,12 +99,16 @@ a {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
-  background-color: black;
+  /*background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;*/
+  background-color: transparent;
+  
+  /*background-attachment: fixed;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  -o-background-size: cover; }
+  -o-background-size: cover; 
+
+}
   .masthead .intro-body {
     display: table-cell;
     vertical-align: middle; }
@@ -113,7 +121,9 @@ a {
   @media (min-width: 768px) {
     .masthead {
       height: 100%;
-      padding: 0; }
+      padding: 0; 
+      border-bottom: 1px dotted white;
+    }
       .masthead .intro-body .brand-heading {
         font-size: 75px;
         font-weight: 100; 
@@ -145,15 +155,22 @@ a {
     color: white;
     background: rgba(255, 255, 255, 0.1); }
 
+.fa-angle-double-down/*:before*/ {
+  color: rgba(0,0,0,0.5)!important;
+}
+
+
 .content-section {
-  padding-top: 100px; }
+  padding-top: 100px; 
+
+}
 
 .project-imgs {
     
     height: 244px;
     width: 100%;
     float: left;
-    border: 2px solid white;
+    border: 1px solid white;
     margin: 2px 0;
 }
 
@@ -225,8 +242,8 @@ a {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url("../../imgs/portfolioImgs/malibu3.jpg") no-repeat center center scroll;
-  background-color: black;
+  /*background: url("../../imgs/portfolioImgs/malibu3.jpg") no-repeat center center scroll;*/
+  background-color: transparent;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -290,7 +307,9 @@ ul.banner-social-buttons {
         margin-bottom: 0; } }
 
 footer {
-  padding: 50px 0; }
+  padding: 50px 0; 
+  background-color: black;
+}
   footer p {
     font-size: 14px;
     margin: 0; }
