--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -140,7 +140,7 @@ a:hover, a:focus {
   .masthead .intro-body .intro-text {
     font-size: 22px;
     color: #fff; } }
-.btn-circle {
+/*.btn-circle {
   width: 50px;
   height: 50px;
   margin-top: 15px;
@@ -153,14 +153,14 @@ a:hover, a:focus {
   -webkit-transition: background .3s ease-in-out;
   -moz-transition: background .3s ease-in-out;
   transition: background .3s ease-in-out; }
-
-.btn-circle:hover, .btn-circle:focus {
-  outline: none;
-  color: white;
-  background: rgba(255, 255, 255, 0.1); }
-
+  .btn-circle:hover, .btn-circle:focus {
+    outline: none;
+    color: white;
+    background: rgba(255, 255, 255, 0.1); }*/
 .fa-angle-double-down {
   color: rgba(0, 0, 0, 0.5) !important; }
+  .fa-angle-double-down:hover {
+    color: rgba(255, 255, 255, 0.75) !important; }
 
 .content-section {
   padding-top: 100px; }
