--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -3,12 +3,11 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
   color: white;
-  background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
-  background-attachment: fixed;
-  background-size: cover;
-  background-color: black;
-  position: relative; }
+  background-color: rgba(0, 0, 0, 1);
+  position: relative; 
+}
 
 html {
   width: 100%;
@@ -23,7 +22,7 @@ h6 {
   margin: 35px 0 0;
   text-transform: uppercase;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 700;
+  font-weight: 100;
   letter-spacing: 1px; }
 
 p {
@@ -99,7 +98,7 @@ a {
   padding: 100px 0;
   text-align: center;
   color: white;
-  /*background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;*/
+  background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
   background-color: transparent;
   
   /*background-attachment: fixed;*/
@@ -122,7 +121,7 @@ a {
     .masthead {
       height: 100%;
       padding: 0; 
-      border-bottom: 1px dotted white;
+      border-bottom: 2px dashed rgba(0, 0, 0, 0.5);
     }
       .masthead .intro-body .brand-heading {
         font-size: 75px;
@@ -276,7 +275,20 @@ a {
   .hide {
     display: block;
     }
+
+  body {
+    background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
+    background-attachment: fixed;
+    background-size: cover;
+    webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); 
+ 
+    .masthead {
+      background-color:transparent;
+      background: none;
+    }
   }
+
+}
 
 .btn {
   text-transform: uppercase;
@@ -334,8 +346,7 @@ img::selection {
 img::-moz-selection {
   background: transparent; }
 
-body {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); }
+
 
 
 
