--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -99,7 +99,7 @@ a:hover, a:focus {
 .masthead {
   display: table;
   width: 100%;
-  height: auto;
+  height: 100%;
   padding: 100px 0;
   text-align: center;
   color: white;
