--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -94,7 +94,7 @@ a {
 .masthead {
   display: table;
   width: 100%;
-  height: auto;
+  height: 100%;
   padding: 100px 0;
   text-align: center;
   color: white;
