--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -3,7 +3,9 @@ body {
   width: 100%;
   height: 100%;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
-
+  background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
+    background-attachment: fixed;
+    background-size: cover;
   color: white;
   background-color: rgba(0, 0, 0, 1);
   position: relative; 
@@ -98,7 +100,7 @@ a {
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
+  /*background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;*/
   background-color: transparent;
   
   /*background-attachment: fixed;*/
@@ -135,24 +137,6 @@ a {
         }
 
       }
-
-/*.btn-circle {
-  width: 50px;
-  height: 50px;
-  margin-top: 15px;
-  padding: 7px 0;
-  border: 2px solid white;
-  border-radius: 100% !important;
-  font-size: 26px;
-  color: white;
-  background: transparent;
-  -webkit-transition: background .3s ease-in-out;
-  -moz-transition: background .3s ease-in-out;
-  transition: background .3s ease-in-out; }
-  .btn-circle:hover, .btn-circle:focus {
-    outline: none;
-    color: white;
-    background: rgba(255, 255, 255, 0.1); }*/
 
 .fa-angle-double-down/*:before*/ {
   color: rgba(0,0,0,0.5)!important;
@@ -277,15 +261,8 @@ a {
     }
 
   body {
-    background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
-    background-attachment: fixed;
-    background-size: cover;
     webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); 
- 
-    .masthead {
-      background-color:transparent;
-      background: none;
-    }
+
   }
 
 }
