Fixing mobile once again

--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -3,7 +3,8 @@ body {
   height: 100%;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
+  background-size: cover;
   color: white;
   background-color: black;
   position: relative; }
@@ -224,7 +225,7 @@ a:hover, a:focus {
     display: block; }
 
   body {
-    background-size: cover;
+    background-attachment: fixed;
     webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); } }
 .btn {
   text-transform: uppercase;
