--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -4,7 +4,8 @@ body {
   height: 100%;
   font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
   background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
+  background-size: cover;
   color: white;
   background-color: rgba(0, 0, 0, 1);
   position: relative; 
@@ -262,7 +263,7 @@ a {
     }
 
   body {
-    background-size: cover;
+    background-attachment: fixed;
     webkit-tap-highlight-color: rgba(255, 255, 255, 0.2); 
 
   }
