--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -56,9 +56,17 @@ a {
 }
   #mainNav .navbar-toggler {
     color: white;
-    font-size: 14px;
-    border: 1px solid white;
-    padding: 11px; }
+    font-size: 40px;
+    /*border: 1px solid white;*/
+    border-color: transparent;
+    padding: 0 10px; 
+
+    &:hover {
+      cursor: pointer;
+      opacity: 0.33;
+    }
+  }
+
   #mainNav .navbar-brand {
     font-weight: 700; }
   #mainNav a {
