Adding updated resume-.pdf format

--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -111,7 +111,7 @@ a {
   /*background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;*/
   background-color: transparent;
   
-  /*background-attachment: fixed;*/
+  background-attachment: fixed!important;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
