--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -112,7 +112,7 @@ a:hover, a:focus {
   color: white;
   /*background: url(../../imgs/portfolioImgs/malibu.jpg) no-repeat bottom center scroll;*/
   background-color: transparent;
-  /*background-attachment: fixed;*/
+  background-attachment: fixed !important;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
