--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -124,11 +124,13 @@ a:hover, a:focus {
 
 .masthead .intro-body .brand-heading {
   font-size: 45px;
-  border-bottom: 2px dashed rgba(0, 0, 0, 0.5); }
+  border-bottom: 2px dashed rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 0px 3px #000; }
 
 .masthead .intro-body .intro-text {
   font-size: 25px;
-  color: #fff; }
+  color: #fff;
+  text-shadow: 0px 0px 3px #000; }
 
 @media (min-width: 768px) {
   .masthead {
@@ -144,7 +146,8 @@ a:hover, a:focus {
 
   .masthead .intro-body .intro-text {
     font-size: 22px;
-    color: #fff; } }
+    color: #fff;
+    text-shadow: 0px 0px 3px #000; } }
 .fa-angle-double-down {
   color: rgba(0, 0, 0, 0.5) !important; }
   .fa-angle-double-down:hover {
