--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -164,7 +164,7 @@ a:hover, a:focus {
   margin: 2px 0; }
 
 .overlay {
-  background: rgba(0, 0, 0, 0.75);
+  background-color: rgba(0, 0, 0, 0.75);
   height: 100%;
   position: relative;
   bottom: 2rem;
@@ -182,18 +182,29 @@ a:hover, a:focus {
   .overlay .project-description {
     opacity: 0;
     transition: opacity 500ms ease; }
-  .overlay:hover p {
-    opacity: 0; }
-  .overlay:hover .project-description {
-    opacity: 1; }
+  .overlay .tech-sentence {
+    background-color: #fff;
+    font-weight: 900;
+    color: #000; }
+  .overlay:hover {
+    /* background-color: rgba(0, 0, 0, 0.75);*/
+    /*  transition: opacity 500ms ease;*/ }
+    .overlay:hover p {
+      opacity: 0; }
+    .overlay:hover .project-description {
+      opacity: 1; }
 
 @media only screen and (max-width: 767px) {
   .hide {
     display: none; } }
-.wikipedia {
-  background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
+.better-doctor {
+  background: url("../../imgs/portfolioImgs/betterdoctor_image.png") no-repeat center;
   background-size: cover;
   margin-top: 15px; }
+
+.wikipedia {
+  background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
+  background-size: cover; }
 
 .museum {
   background: url("../../imgs/portfolioImgs/museum_image.png") no-repeat center;
