--- a/css/portfolioCss/style.scss
+++ b/css/portfolioCss/style.scss
@@ -176,7 +176,7 @@ a {
 
 .overlay {
 
-    background: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.75);
     height: 100%;
     position: relative;
     bottom: 2rem;
@@ -202,7 +202,15 @@ a {
       transition: opacity 500ms ease;
     }
 
+    .tech-sentence {
+      background-color: #fff;
+      font-weight: 900;
+      color: #000;
+    }
+
     &:hover {
+     /* background-color: rgba(0, 0, 0, 0.75);*/
+    /*  transition: opacity 500ms ease;*/
 
       p {
         opacity: 0;
@@ -220,12 +228,15 @@ a {
   }
 }
 
-
+.better-doctor {
+  background: url("../../imgs/portfolioImgs/betterdoctor_image.png") no-repeat center;
+  background-size: cover;
+  margin-top: 15px;
+}
 
 .wikipedia {
   background: url("../../imgs/portfolioImgs/wikipedia_api.png") no-repeat center;
   background-size: cover;
-  margin-top: 15px;
 }
 
 .museum {
