Text shadow on dates, margin bottom on projects

--- a/css/portfolioCss/style.css
+++ b/css/portfolioCss/style.css
@@ -161,7 +161,7 @@ a:hover, a:focus {
   width: 100%;
   float: left;
   border: 1px solid white;
-  margin: 2px 0; }
+  margin: 10px 0; }
 
 .overlay {
   background-color: rgba(0, 0, 0, 0.75);
@@ -465,7 +465,8 @@ Main components
     top: -25px;
     font-size: 16px;
     font-size: 2rem;
-    color: #000; }
+    color: #fff;
+    text-shadow: 2px 2px 0 #000; }
 
   .cd-timeline-block:nth-child(even) .cd-timeline-content {
     float: right; }
