--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -644,6 +644,15 @@ section {
     left: 12.5rem;
     transition: opacity 500ms ease; }
 
+.contact-overlay:hover .vira-card p {
+  opacity: 0.35;
+  transition: opacity 500ms ease; }
+.contact-overlay:hover h3 {
+  opacity: 1;
+  font-size: 25px; }
+.contact-overlay:hover .fa {
+  font-size: larger; }
+
 .tech-sentence {
   font-weight: bold; }
 
